--- a/Portfolio/css/styles.css
+++ b/Portfolio/css/styles.css
@@ -3,6 +3,10 @@ body {
     background-color: #353B41;
     color: white;
 }
+.wrapper {
+    width: 80%;
+    margin: 0 auto;
+}
 nav ul {
     margin: 0;
     padding: 0;
@@ -25,17 +29,13 @@ nav a:hover {
     color: #b91300;
 }
 .main {
-    border: 10px solid red;
     display: flex;
+    margin-top: 8rem;
 }
 .intro-txt {
     flex: 1;
     text-align: center;
     padding: 0;
     margin: 10rem 0 0 0; 
-}
-.dev-img {
-
-    border: 10px dotted yellow;
 }
 
