--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -56,7 +56,7 @@ nav a:hover {
  .panels{
     list-style-type: none;
     padding: 0;
-    margin: 5rem auto;
+    margin: 5rem 0 0 0;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
